<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:elevation="4dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/AppTheme.Toolbar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrolling_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:max="10"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:textSize="19dp" />


            </FrameLayout>

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/summary"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white" />

            <include
                layout="@layout/trailers_and_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onFavoritClicked"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:elevation="6dp"
        app:layout_anchor="@id/scrolling_container"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>
