<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.banana.movierankinkorea.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/grid_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>
